2008-01-27  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkNotebook.c: Make sure to schedule a 
	redisplay when adding and/or hiding tabs [Bug 1878298].

2008-01-27  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Merged common code from InitFont()
	and TkpGetFontAttrsForChar(), factored into GetTkFontAttributes()
	and GetTkFontMetrics().  Removed write-only struct UnixFtFont
	member 'drawable'.  Removed unneeded double-pointer indirections.
	Ensure that TkFontAttributes.family member is a Tk_Uid, as
	specified.  Use FcTypeDouble for XFT_SIZE attribute.
	Finally: fix [Bug 835848].

2008-01-25  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.1 release.

2008-01-08  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkFrame.c: BUGFIX: fix crash in [ttk::labelframe]
	when -style option specified [Bug 1867122].

2008-01-08  Joe English  <jenglish@users.sourceforge.net>

	* win/ttkWinTheme.c: Add tristate support to checkbuttons 
	and radiobuttons [Bug 1865898].  Fix check and radio indicator 
	size [Bug 1679067].

2008-01-06  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkWidget.c, generic/ttk/ttkWidget.h:
	Call Tk_MakeWindowExist() in widget constructor.
	Removed now-unnecessary initial ConfigureNotify processing.

2008-01-06  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/treeview.tcl, library/ttk/utils.tcl:
	Fix MouseWheel bindings for ttk::treeview widget
	(Fixes #1442006, #1821939, #1862692)

2008-01-02  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump version number to 8.5.1b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.0 and
	* unix/configure.in:	8.5.1 releases.
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2007-12-30  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: Documented exact behaviour of items with respect to