@@ -17,10 +17,11 @@ ttk::button \- Widget that issues a command when pressed
 .SH DESCRIPTION
 A \fBttk::button\fR widget displays a textual label and/or image,
 and evaluates a command when pressed.
-.SO
-\-class	\-compound	\-cursor	\-image
-\-state	\-style	\-takefocus	\-text	
-\-textvariable	\-underline	\-width
+.SO ttk_widget
+\-class	\-compound	\-cursor
+\-image	\-state	\-style
+\-takefocus	\-text	\-textvariable
+\-underline	\-width
 .SE
 .SH "WIDGET-SPECIFIC OPTIONS"
 .OP \-command command Command
