@@ -1,3 +1,14 @@
+2008-01-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* doc/ttk_*.n: Adjusted handling of the standard options part of the
+	Ttk manual pages so that they are documented in the correct location.
+	[Bug 1876493]
+
+2008-01-28  Joe English  <jenglish@users.sourceforge.net>
+
+	* unix/tkUnixRFont.c: Re-fix strict-aliasing warnings
+	reintroduced by last patch.
+
 2008-01-27  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkNotebook.c: Make sure to schedule a 
